[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trigrs-pywrap"
version = "1.0.0"
authors = [
    {name = "Federico Gómez", email = "fjgomezc@eafit.edu.co"},
]
description = "Python wrapper for the TRIGRS landslide hazard analysis model"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "trigrs",
    "landslide",
    "slope stability",
    "geohazard",
    "rainfall",
    "infiltration",
    "gis",
    "raster",
]
dependencies = [
    "geopandas>=0.12.0",
    "rasterio>=1.3.0",
    "rioxarray>=0.13.0",
    "xarray>=2022.6.0",
    "pysheds>=0.3.0",
    "geocube>=0.3.0",
    "numpy>=1.21.0",
    "scipy>=1.9.0",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
]
all = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/federicogmz/trigrs-pywrap"
Repository = "https://github.com/federicogmz/trigrs-pywrap.git"
Documentation = "https://github.com/federicogmz/trigrs-pywrap/blob/main/README.md"
"Bug Reports" = "https://github.com/federicogmz/trigrs-pywrap/issues"

[tool.setuptools.packages.find]
include = ["geohazards*"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--verbose",
    "--cov=geohazards",
    "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["geohazards"]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
